--- a/frontend/src/css/Home.css
+++ b/frontend/src/css/Home.css
@@ -5,7 +5,7 @@
     justify-content: center;
     height: 100vh;
     text-align: center;
-    background-color: #fdfdfd;
+    background-color: #547792;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
   
