--- a/frontend/src/css/Navbar.css
+++ b/frontend/src/css/Navbar.css
@@ -1,7 +1,7 @@
 /* src/css/Navbar.css */
 
 .navbar {
-    background-color: #4CAF50;
+    background-color: #213448;
     padding: 1rem 2rem;
     display: flex;
     justify-content: space-between;
