--- a/frontend/src/css/AddStudent.css
+++ b/frontend/src/css/AddStudent.css
@@ -2,7 +2,7 @@
     max-width: 500px;
     margin: 40px auto;
     padding: 25px;
-    background-color: #f9f9f9;
+    background-color: #ECEFCA;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   }
@@ -30,7 +30,7 @@
   
   .student-form button {
     padding: 12px;
-    background-color: #007bff;
+    background-color: #94B4C1;
     color: white;
     font-weight: bold;
     border: none;
@@ -40,7 +40,7 @@
   }
   
   .student-form button:hover {
-    background-color: #0056b3;
+    background-color: #7a9bb3;
   }
   
   .checkbox-label {
