--- a/frontend/src/css/StudentList.css
+++ b/frontend/src/css/StudentList.css
@@ -17,12 +17,12 @@
     cursor: pointer;
     border-radius: 5px;
     border: 1px solid #555;
-    background-color: #eee;
+    background-color: #94B4C1;
     transition: background-color 0.3s ease;
   }
   
   button:hover {
-    background-color: #ddd;
+    background-color: #7a9bb3;
   }
   
   table {
@@ -36,7 +36,7 @@
   }
   
   th {
-    background-color: #f2f2f2;
+    background-color: #ECEFCA;
   }
   
   .edit{
