--- a/frontend/src/css/Home.css
+++ b/frontend/src/css/Home.css
@@ -5,8 +5,8 @@
     justify-content: center;
     height: 100vh;
     text-align: center;
-    background-color: #547792;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #ECEFCA;
+    font-family: 'Times New Roman', Times, serif;
   }
   
   .home-container h2 {
